[gd_scene load_steps=4 format=3 uid="uid://cyt5xxp0wi6lf"]

[ext_resource type="Script" uid="uid://c443lcmd2y0ko" path="res://BrainVisualizer/UI/Windows/View_Cortical_Areas/WindowViewCorticalArea.gd" id="1_ypq52"]
[ext_resource type="PackedScene" uid="uid://c10sw6pgpfy48" path="res://BrainVisualizer/UI/GenericElements/TitleBar/TitleBar.tscn" id="3_3awq0"]
[ext_resource type="PackedScene" uid="uid://bang2hiadhcuc" path="res://BrainVisualizer/UI/GenericElements/Scroll/ScrollGeneric/ScrollSectionGenericWithFilter.tscn" id="3_vrwu2"]

[node name="WindowViewCorticalArea" type="VBoxContainer"]
offset_right = 250.0
offset_bottom = 444.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 0
script = ExtResource("1_ypq52")

[node name="TitleBar" parent="." instance=ExtResource("3_3awq0")]
layout_mode = 2
title = "View Cortical Areas"

[node name="WindowPanel" type="PanelContainer" parent="."]
layout_mode = 2

[node name="WindowMargin" type="MarginContainer" parent="WindowPanel"]
layout_mode = 2
theme_type_variation = &"MarginContainer_WindowBorder"

[node name="WindowInternals" type="VBoxContainer" parent="WindowPanel/WindowMargin"]
layout_mode = 2
theme_type_variation = &"VBoxContainer_far"

[node name="Button" type="Button" parent="WindowPanel/WindowMargin/WindowInternals"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_type_variation = &"Button_Tall"
text = "Add Cortical Area..."

[node name="ScrollSectionGenericWithFilter" parent="WindowPanel/WindowMargin/WindowInternals" instance=ExtResource("3_vrwu2")]
layout_mode = 2

[node name="ScrollSectionGeneric" parent="WindowPanel/WindowMargin/WindowInternals/ScrollSectionGenericWithFilter" index="1"]
custom_minimum_size = Vector2(0, 200)
horizontal_scroll_mode = 0

[node name="BoxContainer" parent="WindowPanel/WindowMargin/WindowInternals/ScrollSectionGenericWithFilter/ScrollSectionGeneric" index="0"]
size_flags_horizontal = 3

[node name="Button2" type="Button" parent="WindowPanel/WindowMargin/WindowInternals"]
layout_mode = 2
text = "Update Visabilties"

[connection signal="pressed" from="WindowPanel/WindowMargin/WindowInternals/Button" to="." method="_press_add_cortical_area"]
[connection signal="pressed" from="WindowPanel/WindowMargin/WindowInternals/Button2" to="." method="_button_update_visabilities"]

[editable path="WindowPanel/WindowMargin/WindowInternals/ScrollSectionGenericWithFilter"]
